samples/_failures_safe/1761087260_ea4816_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53938880.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_53938880.c:172:9: error: expected declaration or statement at end of input
  172 |         case TOKEN_NUMBER: printf("NUMBER"); break;
      |         ^~~~
./samples/SAFE/__tmp_53938880.c:172:9: error: expected declaration or statement at end of input
